# python-project-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .zenodo.json  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: main.yaml
carbonplan_project/: __init__.py
envs/: environment-dev.yml
